--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "restaurant-page",
+  "name": "javascript-template",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "dev": "webpack serve",
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "keywords": [],
   "author": "",
